--- a/StevenUniverse/stevenUniverse.html
+++ b/StevenUniverse/stevenUniverse.html
@@ -18,15 +18,19 @@
         </div>
     </header>
     <main>
-        <h1>Вселенная Стивена</h1>
-        <div class="text">
-            <p>
-                «Вселенная Стивена» — американский мультсериал, созданный Ребеккой Шугар для телеканала Cartoon Network. <br> <br>
+        <img id="mobileImg" src="../img/stevenUniverse/PhoneBackgroundMain.png"> 
+        
+        <div class="mobile_text">
+            <h1>Вселенная Стивена</h1>
+            <div class="text">
+                <p>
+                    «Вселенная Стивена» — американский мультсериал, созданный Ребеккой Шугар для телеканала Cartoon Network. <br> <br>
 
-                По сюжету, команда, называющая себя Кристальными самоцветами, защищает мир от различных угроз. Она первоначально состоит из мальчика Стивена и инопланетянок Гранат, Аметист и Жемчуг, являющихся живыми камнями. Стивен, который наполовину самоцвет, пытается раскрыть тайну использования собственных сил, помогая друзьям спасать Землю. <br> <br>
+                    По сюжету, команда, называющая себя Кристальными самоцветами, защищает мир от различных угроз. Она первоначально состоит из мальчика Стивена и инопланетянок Гранат, Аметист и Жемчуг, являющихся живыми камнями. Стивен, который наполовину самоцвет, пытается раскрыть тайну использования собственных сил, помогая друзьям спасать Землю. <br> <br>
 
-                Сериал был номинирован на премию «Эмми» и дважды на «Энни». Мультсериал закончился 21 января 2019 года и насчитывал 6 сезонов.
-            </p>
+                    Сериал был номинирован на премию «Эмми» и дважды на «Энни». Мультсериал закончился 21 января 2019 года и насчитывал 6 сезонов.
+                </p>
+            </div>
         </div>
     </main>
 </body>
