--- a/HarryPotter/harryPotter.html
+++ b/HarryPotter/harryPotter.html
@@ -118,10 +118,10 @@
             </map>
             <div class="mobImg">
                 <div class="Img">
-                    <img class="mainHero" src="img/harryPotter/Harry.jpg">
-                    <img class="mainHero" src="img/harryPotter/Ron.jpg">
+                    <img class="mainHero" src="../img/harryPotter/Harry.jpg">
+                    <img class="mainHero" src="../img/harryPotter/Ron.jpg">
                     <div id="Germione">
-                        <img class="mainHero"  src="img/harryPotter/Germione.jpg">
+                        <img class="mainHero"  src="../img/harryPotter/Germione.jpg">
                     </div>
                 </div>
             </div>
