v 1.2 добавил сайт с персонажами Вселенной Стивена

--- a/StevenUniverse/pages/heroes.html
+++ b/StevenUniverse/pages/heroes.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Персонажи</title>
+    <link rel="stylesheet" href="../css/history_style.css">
 </head>
 <body>
-    
+    <header>
+    <a href="../stevenUniverse.html"><img id="logo" src="../../img/stevenUniverse/logo.png" alt="Логотив Встеленной Стивена"></a>
+        <div class="list">
+            <ul>
+                <li><a href="history.html">История создания</a></li>
+                <li><a href="../../index.html">Главная страница</a></li>
+            </ul>
+        </div>
+    </header>
+    <main>
+        <p class="text">Стивен Юнивёрс</p>
+        <p class="text">Жемчуг</p>
+        <p class="text">Гранат</p>
+        <p class="text">Аметист</p>
+        <p class="text">Конни</p>
+        <p class="text">Грег</p>
+        <p class="text">Перидот</p>
+        <p class="text">Ляпис Лазурит</p>
+        <p class="text">Лев</p>
+        <p class="text">Розовый кварц</p>
+        <p class="text">Розовый алмаз</p>
+        <p class="text">Синий алмаз</p>
+        <p class="text">Жёлтый алмаз</p>
+        <p class="text">Белый алмаз</p>
+    </main>
 </body>
 </html>
